# Parallel-UTT-AI

./: .gitignore  CMakeLists.txt  README.md  check.py
src/: Board.cpp  Board.h  Game.cpp  Game.h  UltimateBoard.cpp  UltimateBoard.h  main.cpp
src/agents/: Agent.h  HumanPlayer.cpp  HumanPlayer.h  MCTS.h  MCTSParallel.cpp  MCTSSerial.cpp  Minimax.h  MinimaxParallel.cpp  MinimaxSerial.cpp  RandomAgent.cpp  RandomAgent.h
tests/: 2.in  3.in
